--- a/index.html
+++ b/index.html
@@ -1,72 +1,82 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Resume 1</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles/style.css" type="text/css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 </head>
-
 <body>
-   <div class="container text-center">
-  <div class="row">
-        <div class="col-12"></div>
-        <button type="button" class="btn btn-primary">Primary</button>
-        <button type="button" class="btn btn-secondary">Secondary</button>
-        <button type="button" class="btn btn-success">Success</button>
-        <button type="button" class="btn btn-danger">Danger</button>
-        <button type="button" class="btn btn-warning">Warning</button>
-        <button type="button" class="btn btn-info">Info</button>
-        <button type="button" class="btn btn-light">Light</button>
-        <button type="button" class="btn btn-dark">Dark</button>
-        
-        <button type="button" class="btn btn-link">Link</button>
-  
-    </div>
-    <div class="col-md-12 col-lg-6">
-  </div>
+  <div></div>
+  <div class="container-fluid ">
+    <div class="row">
+      <div class="col-sm-12 col-md-5">
+        <h1>Pierre-Bruno Vernhet </h1>
+        <br>
+        <div class="gauche">
+          <h3>A Propos de moi</h3>
+        </div>
+        <br>
+        <div class="experience">
+          <p> Area Experience GRETA Stagiaire Developpement WWM October 2022 - Present (2 months) Mende, Occitanie,</p>
+          <p> Sophia EPB Chief Manager April 2008 - November 2022 (14 years 8 months)</p>
+          <p>Meridien Bora Financial Controller June 2003 - July 2006 (3 years 2 m)</p>
+          <p> Ecole Hoteliere de Lausanne EHL · (September 1978 - January 1982)</p>
+          <p>Probatoire DESC</p>     
+        </div>
+        <div class="frame">
+          <img src="images/1000_F_283776770_7J036st9aM7ebTUU5HAGUWJqQ2MZKT6I.jpg" alt="But" class="im.center">
+        </div>
+      </div>
 
-  <div class="accordion" id="accordionExample">
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="headingOne">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Accordion Item #1
-        </button>
-      </h2>
-      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      <div class="col-sm-12 d-flex justify-content-center col-md-2">
+        <div class="photos">
+          <img src="../brief3/images/tete2.jpg" title="BONJOUR">
         </div>
       </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="headingTwo">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Accordion Item #2
-        </button>
-      </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      <div class="col-sm-12 d-flex justify-content-center col-md-5">
+        <div class="text-md-center">
+          <br>
+            <div class="text-secondary"> ACTUELLEMENT</div>
+            <br>
+            <div class="text-grey">
+              <p> 
+                <strong>
+                <em>  A La recherche d'un stage 
+                      pour valider ma formation
+                </em>
+                </strong>
+              </p>
+            </div>  
+            <br>
+            <div class="droite">
+              <p>Apres avoir voyagé du nord au sud,
+              je me suis retrouvé en France pour
+              la reprise d’une auberge restaurant pres d'Avigon.</p>
+              <p>Mon expériences dans l’hotellerie de luxe m’ont permis de redévelopper
+              cet etablissement à un bon niveau gastronomique.</p>
+              <p>J’ai profité de mon retours en Lozere pour effectuer une reconvertion
+              professionnelle dans le developpement web et web mobile.
+              Par passion et curiosité au greta de Mende.</p>
+          <div class="bas">
+            Contacter moi :
+            <div class="frame2">
+              <div class="text-md-center">
+                <div class="text-dark">  06.84.54.21.50
+                  <div class="text-dark">  04.66.32.66.91
+                  <br>     
+                  p-bvernhet@yahoo.fr
+                </div>
+              </div>
+            
+        <div class="babas">
+          <img src="images/evol3.jpg" class="rounded-circle" alt="tuc" style="width:30%; height:50%">
         </div>
       </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="headingThree">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Accordion Item #3
-        </button>
-      </h2>
-      <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-        </div>
-      </div>
-    </div>
-  </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
-
-    </script>
+  </div> 
 </body>
 </html>
