--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div class="col-sm-12 d-flex justify-content-center col-md-2">
         <div class="photos"><image class="pierre-clig" 
-              img src="../brief3/images/pierre.jpg" title="BONJOUR A VOUS">
+              img src="/images/pierre1.jpg" title="BONJOUR A VOUS">
         </div>
       </div>
       <div class="col-sm-12 d-flex justify-content-center col-md-4">
